--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -4,82 +4,92 @@
     <meta charset="UTF-8">
     <title>ramda tests</title>
     <style>
-    .console {
-        position: static;
-        font-size: larger;
-        top: 0;
-        height: auto;
-        background: #333;
-        left: 0;
-        right: 0;
-        padding: 5px;
-        color: #FFF
-    }
-    .console b {
-        font-weight: bold
-    }
-    .book {
-        background-color: rgba(255, 132, 225, 0.24);
-    }
-    .ChptrReadGrps > .pst {
-        display: none;
-    }
-    .ChptrReadGrps > .fut  {
-        display: none;
-    }
-    .VerseReadGrps > .pst {
-        position: static;
-        background-color: rgba(255, 0, 0, 0.24);
-    }
-    .VerseReadGrps > .cur {
-        font-size: larger;
-    }
-    .VerseReadGrps > .fut {
-        background-color: rgba(145, 248, 29, 0.29);
-    }
-    <!--</style>
+        .console {
+            position: static;
+            font-size: larger;
+            top: 0;
+            height: auto;
+            background: #333;
+            left: 0;
+            right: 0;
+            padding: 5px;
+            color: #FFF
+        }
+
+        .console b {
+            font-weight: bold
+        }
+
+        .book {
+            background-color: rgba(255, 132, 225, 0.24);
+        }
+
+        .ChptrReadGrps > .pst {
+            display: none;
+        }
+
+        .ChptrReadGrps > .fut {
+            display: none;
+        }
+
+        .VerseReadGrps > .pst {
+            position: static;
+            background-color: rgba(255, 0, 0, 0.24);
+        }
+
+        .VerseReadGrps > .cur {
+            font-size: larger;
+        }
+
+        .VerseReadGrps > .fut {
+            background-color: rgba(145, 248, 29, 0.29);
+        }
+
+        <!--</style>
     <!--<script>-->
-        <!--let ready = function ( fn ) {-->
+    <!--let ready = function ( fn ) {-->
 
-            <!--// Sanity check-->
-            <!--if ( typeof fn !== 'function' ) return;-->
+    <!--// Sanity check-->
+    <!--if ( typeof fn !== 'function' ) return;-->
 
-            <!--// If document is already loaded, run method-->
-            <!--if ( document.readyState === 'complete'  ) {-->
-                <!--return fn();-->
-            <!--}-->
+    <!--// If document is already loaded, run method-->
+    <!--if ( document.readyState === 'complete'  ) {-->
+    <!--return fn();-->
+    <!--}-->
 
-            <!--// Otherwise, wait until document is loaded-->
-            <!--// The document has finished loading and the document has been parsed but sub-resources such as images, stylesheets and frames are still loading. The state indicates that the DOMContentLoaded event has been fired.-->
-            <!--document.addEventListener( 'interactive', fn, false );-->
+    <!--// Otherwise, wait until document is loaded-->
+    <!--// The document has finished loading and the document has been parsed but sub-resources such as images, stylesheets and frames are still loading. The state indicates that the DOMContentLoaded event has been fired.-->
+    <!--document.addEventListener( 'interactive', fn, false );-->
 
-            <!--// Alternative: The document and all sub-resources have finished loading. The state indicates that the load event has been fired.-->
-            <!--// document.addEventListener( 'complete', fn, false );-->
-        <!--};-->
-        <!--ready(function() {-->
-            <!--console.log('I AM ready!!');-->
-        <!--});-->
+    <!--// Alternative: The document and all sub-resources have finished loading. The state indicates that the load event has been fired.-->
+    <!--// document.addEventListener( 'complete', fn, false );-->
+    <!--};-->
+    <!--ready(function() {-->
+    <!--console.log('I AM ready!!');-->
+    <!--});-->
     <!--</script>-->
 </head>
-<body>
+<body onload="myFunction()">
 
 <div class="console">C_Both</div>
 
 SOME "body" TEXT
 <div class="book" id="book1">
     Some 'book' TEST.
-
 </div>
 <script>
-//    ready(function() {
-//        console.log('I AM ready!!');
-//    }); // CAN'T CALL unless defined somewhere
-</script>
-<script type="text/javascript">
-    function onLoadHandler() {
-        // your original javascript code here...
+    function myFunction() {
+        console.log("Page is loaded");
+        "use strict";
+//        var a = R.add(11); //> 3 Adds first 2 numbers, not n numbers.
+////C_It(a(9)); //> 20);
+//        console.log(a(9));
+//        console.assert(a(9) === 20);
+
+        //# sourceMappingURL=ramda_tests-compiled.js.map
     }
 </script>
+<script src="../node_modules/ramda/dist/ramda.min.js"></script>
 <script src="ramda_tests-compiled.js"></script>
 </body>
 </html>
