REMOVED ALL C_It() and C_Trace() WHILE I LEARN Ramda

--- a/testDoc.html
+++ b/testDoc.html
@@ -123,5 +123,6 @@
 <script src="./src/set_verse_styles-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
+<script src="./node_modules/ramda/dist/ramda.min.js"></script>
 </body>
 </html>
