--- a/testDoc.html
+++ b/testDoc.html
@@ -117,12 +117,13 @@
         </div>
     </div>
 </div>
+// the Order of these is important: Dependencies
 <script src="node_modules/ramda/dist/ramda.min.js"></script>
-<script src="src/update_ReadGrp-compiled.js"></script>
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
-<script src="src/bindHandlers-compiled.js"></script>
 <script src="src/set_verse_styles-compiled.js"></script>
+<script src="src/bindHandlers-compiled.js"></script>
+<script src="src/update_ReadGrp-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
 </body>
 </html>
