GotIW: update_ReadGrp.js  REFACT > Ramda: GET_cur() && GET_Grps() a little use of R.   still trying to figure ramda out. Too many choices for new guy

--- a/testDoc.html
+++ b/testDoc.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 </div>
-// the Order of these is important: Dependencies
+<!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.min.js"></script>
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
