--- a/testDoc.html
+++ b/testDoc.html
@@ -118,7 +118,7 @@
     </div>
 </div>
 <!--// the Order of these is important: Dependencies-->
-<script src="node_modules/ramda/dist/ramda.min.js"></script>
+<script src="node_modules/ramda/dist/ramda.js"></script>
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/set_verse_styles-compiled.js"></script>
