REFACT: ADDED READ_Last() to tests tstRead_  () AND REFACTED MORE FP WORKING STABLE: MOVE_Next() and MOVE_Last()

--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -82,7 +82,7 @@ SOME "body" TEXT
         console.log("Page is loaded");
     }
 </script>
-<script src="../node_modules/ramda/dist/ramda.min.js"></script>
+<script src="../node_modules/ramda/dist/ramda.js"></script>
 <script src="../src/functions-compiled.js"></script>
 <script src="ramda_tests-compiled.js"></script>
 </body>
