--- a/testDoc.html
+++ b/testDoc.html
@@ -121,8 +121,8 @@
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/set_verse_styles-compiled.js"></script>
+<script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="src/update_ReadGrp-compiled.js"></script>
-<script src="tst/testDoc-compiled.js"></script>
+<!--<script src="tst/testDoc-compiled.js"></script>-->
 </body>
 </html>
