--- a/testDoc.html
+++ b/testDoc.html
@@ -124,5 +124,7 @@
 <script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <!--<script src="tst/testDoc-compiled.js"></script>-->
+<script src="main.js"></script>
+
 </body>
 </html>
