--- a/testDoc.html
+++ b/testDoc.html
@@ -123,8 +123,8 @@
 <script src="src/set_verse_styles-compiled.js"></script>
 <script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<!--<script src="tst/testDoc-compiled.js"></script>-->
-<script src="main.js"></script>
+<script src="tst/testDoc-compiled.js"></script>
+<!--<script src="main.js"></script>-->
 
 </body>
 </html>
