--- a/testDoc.html
+++ b/testDoc.html
@@ -39,7 +39,7 @@
         <!--</style>
 </head>
 <body>
-<div class="console">C_Both</div>
+<div class="console"> C_Both </div>
 <div class="book">
     <span id="testStyle">King James Version:</span>
     <div class="ChptrReadGrps">
@@ -123,8 +123,8 @@
 <script src="src/set_verse_styles-compiled.js"></script>
 <script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="tst/testDoc-compiled.js"></script>
-<!--<script src="main.js"></script>-->
+<!--<script src="tst/testDoc-compiled.js"></script>-->
+<script src="main-compiled.js"></script>
 
 </body>
 </html>
