MOVED original functions.js FROM src/ TO tst/ CREATED new src/functions.js IN src/  w/ C_Both() as tracer WIP RAN tstDocs USING C_Grp_NL w/o setting Style   WORKING: Chptr Events ! WORKING: Verse Events BECAUSE the C_Grp_NL is not pointing corrctly.

--- a/Job_01.html
+++ b/Job_01.html
@@ -948,7 +948,7 @@ Selected Text:
         </div>
     </div>
 </div>
-<script src="./src/functions-compiled.js"></script>
+<script src="tst/functions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
 <script src="src/update_ReadGrp-compiled.js"></script>
 <script src="./src/set_verse_styles-compiled.js"></script>
