--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -83,7 +83,7 @@ SOME "body" TEXT
     }
 </script>
 <script src="../node_modules/ramda/dist/ramda.js"></script>
-<script src="../src/functions-compiled.js"></script>
+<script src="functions-compiled.js"></script>
 <script src="ramda_tests-compiled.js"></script>
 </body>
 </html>
