--- a/tst/update_ReadGrp_TESTS.html
+++ b/tst/update_ReadGrp_TESTS.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 </div>
-<script src="../src/functions-compiled.js"></script>
+<script src="functions-compiled.js"></script>
 <script src="../src/bindHandlers-compiled.js"></script>
 <script src="../src/update_ReadGrp-compiled.js"></script>
 <script src="../src/set_verse_styles-compiled.js"></script>
