STABLE REFACT CLEAN UP  BOTH tstDoc.html WORKING WITH tstDoc.js AND main.js  All READ_ the html / DOM IS WORKING!! done *** 1TAAT: V_Grp_NL HAS the correct Chapter div.current
next 1TAAT: GET set_Verse-style REFACTORED !

--- a/testDoc.html
+++ b/testDoc.html
@@ -123,8 +123,8 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <script src="src/set_verse_styles-compiled.js"></script>
 <script src="src/READ_Grps-compiled.js"></script>
-<!--<script src="tst/testDoc-compiled.js"></script>-->
-<script src="main-compiled.js"></script>
+<script src="tst/testDoc-compiled.js"></script>
+<!--<script src="main-compiled.js"></script>-->
 
 </body>
 </html>
