--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -73,17 +73,91 @@
 
 <div class="console">C_Both</div>
 
-SOME "body" TEXT
-<div class="book" id="book1">
-    Some 'book' TEST.
+<div class="book">
+    <span id="testStyle">King James Version:</span>
+
+    <div class="ChptrReadGrps">
+        <div class="pst">
+            <div class="chptr">
+                King James Version: Chapter 1
+                <div class="VerseReadGrps">
+                    <div class="pst">
+                    </div>
+                    <div class="cur">
+                        <div class='vers'>chptr:1 verse:1 ndx:0</div>
+                    </div>
+                    <div class="fut">
+                        <div class='vers'>chptr:1 verse:2 ndx:1</div>
+                        <div class='vers'>chptr:1 verse:3 ndx:2</div>
+                        <div class='vers'>chptr:1 verse:4 ndx:3</div>
+                        <div class='vers'>chptr:1 verse:5 ndx:4</div>
+                        <div class='vers'>chptr:1 verse:6 ndx:5</div>
+                        <div class='vers'>chptr:1 verse:7 ndx:6</div>
+                        <div class='vers'>chptr:1 verse:8 ndx:7</div>
+                        <div class='vers'>chptr:1 verse:9 ndx:8</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cur" id="cur_ChptrReadGrp">
+            <div class="chptr">
+                King James Version: Chapter 2
+                <div class="VerseReadGrps">
+                    <div class="pst">
+                        <div class='vers'>chptr:2 verse:1 ndx:0</div>
+                    </div>
+                    <div class="cur" id="cur_VerseReadGrp">
+                        <div class='vers'>chptr:2 verse:2 ndx:1</div>
+                    </div>
+                    <div class="fut">
+                        <div class='vers'>chptr:2 verse:3 ndx:2</div>
+                        <div class='vers'>chptr:2 verse:4 ndx:3</div>
+                        <div class='vers'>chptr:2 verse:5 ndx:4</div>
+                        <div class='vers'>chptr:2 verse:6 ndx:5</div>
+                        <div class='vers'>chptr:2 verse:7 ndx:6</div>
+                        <div class='vers'>chptr:2 verse:8 ndx:7</div>
+                        <div class='vers'>chptr:2 verse:9 ndx:8</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="fut">
+            <div class="chptr">
+                King James Version: Chapter 3
+                <div class="VerseReadGrps">
+                    <div class="pst">
+                        <div class='vers'>chptr:3 verse:1 ndx:0</div>
+                        <div class='vers'>chptr:3 verse:2 ndx:1</div>
+                    </div>
+                    <div class="cur">
+                        <div class='vers'>chptr:3 verse:3 ndx:2</div>
+                    </div>
+                    <div class="fut">
+                        <div class='vers'>chptr:3 verse:4 ndx:3</div>
+
+                        <div class='vers'>chptr:3 verse:5 ndx:4</div>
+
+                        <div class='vers'>chptr:3 verse:6 ndx:5</div>
+
+                        <div class='vers'>chptr:3 verse:7 ndx:6</div>
+
+                        <div class='vers'>chptr:3 verse:8 ndx:7</div>
+
+                        <div class='vers'>chptr:3 verse:9 ndx:8</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="../node_modules/ramda/dist/ramda.js"></script>
+<script src="../src/functions-compiled.js"></script>
+<script src="../src/objects-compiled.js"></script>
+<script src="ramda_tests-compiled.js"></script>
 <script>
     function myFunction() {
         console.log("Page is loaded");
     }
 </script>
-<script src="../node_modules/ramda/dist/ramda.js"></script>
-<script src="functions-compiled.js"></script>
-<script src="ramda_tests-compiled.js"></script>
 </body>
 </html>
