WIP   CREATED READ_Grp_tests.js BY MOVING testDoc.js TO it. gotIW WHEN read_Grp_tests IS <script src="source IN testDoc.html PREPARED testDoc.js FOR just 1TAAT work on Styles STABLE: YES 1TAAT: GET VerseStyles WORKING

--- a/testDoc.html
+++ b/testDoc.html
@@ -124,6 +124,7 @@
 <script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
+<!--<script src="tst/READ_Grp_tests-compiled.js"></script>-->
 <!--<script src="main-compiled.js"></script>-->
 
 </body>
