REMOVED onLoad function and script

--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -47,7 +47,7 @@
 
         <!--</style>
 </head>
-<body onload="myFunction()">
+<!--<body onload="myFunction()">-->
 
 <div class="console">C_Both</div>
 
@@ -132,10 +132,10 @@
 <script src="../src/functions-compiled.js"></script>
 <script src="../src/objects-compiled.js"></script>
 <script src="ramda_tests-compiled.js"></script>
-<script>
-    function myFunction() {
-        console.log("Page is loaded");
-    }
-</script>
+<!--<script>-->
+    <!--function myFunction() {-->
+        <!--console.log("Page is loaded");-->
+    <!--}-->
+<!--</script>-->
 </body>
 </html>
