--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -124,6 +124,7 @@
                         <div class='vers'>chptr:3 verse:9 ndx:8</div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -131,6 +132,7 @@
 <script src="../node_modules/ramda/dist/ramda.js"></script>
 <script src="../src/functions-compiled.js"></script>
 <script src="../src/objects-compiled.js"></script>
+<script src="../src/set_verse_styles-compiled.js"></script>
 <script src="ramda_tests-compiled.js"></script>
 <!--<script>-->
     <!--function myFunction() {-->
