MAJOR CHANGE:  USE STYLE_Verse.js AND STYLE_Verses_TESTS.js INSTEAD OF testDoc.js This is th first step in reducing my development /  testing to just ONE test at a time. I will put all the STYLE test in this file GIT it to a branch then develop in CURRENT branch
IN testDoc.js
OneTAAT: STYLE_eachVerse

--- a/testDoc.html
+++ b/testDoc.html
@@ -120,10 +120,11 @@
 <script src="node_modules/ramda/dist/ramda.js"></script>
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
-<script src="src/set_verse_styles-compiled.js"></script>
-<script src="src/READ_Grps-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="tst/testDoc-compiled.js"></script>
+<script src="src/READ_Grps-compiled.js"></script>
+<!--<script src="tst/testDoc-compiled.js"></script>-->
+<!--<script src="src/STYLE_Verses-compiled.js"></script>-->
+<script src="tst/STYLE_Verses_TESTS-compiled.js"></script>
 <!--<script src="tst/READ_Grp_tests-compiled.js"></script>-->
 <!--<script src="main-compiled.js"></script>-->
 </body>
