--- a/Job_01.html
+++ b/Job_01.html
@@ -951,7 +951,7 @@ Selected Text:
 <script src="tst/functions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
 <script src="src/update_ReadGrp-compiled.js"></script>
-<script src="./src/set_verse_styles-compiled.js"></script>
+<script src="src/STYLE_Verses-compiled.js"></script>
 <script src="./src/objects-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
