--- a/tst/ramda_tests.html
+++ b/tst/ramda_tests.html
@@ -48,6 +48,7 @@
         <!--</style>
 </head>
 <!--<body onload="myFunction()">-->
+<body>
 
 <div class="console">C_Both</div>
 
@@ -132,7 +133,7 @@
 <script src="../node_modules/ramda/dist/ramda.js"></script>
 <script src="../src/functions-compiled.js"></script>
 <script src="../src/objects-compiled.js"></script>
-<script src="../src/set_verse_styles-compiled.js"></script>
+<script src="../src/STYLE_Verses-compiled.js"></script>
 <script src="ramda_tests-compiled.js"></script>
 <!--<script>-->
     <!--function myFunction() {-->
