--- a/testDoc.html
+++ b/testDoc.html
@@ -124,8 +124,8 @@
 <script src="src/READ_Grps-compiled.js"></script>
 <!--<script src="tst/READ_Grp_tests-compiled.js"></script>-->
 <!--<script src="src/STYLE_Verses-compiled.js"></script>-->
-<script src="tst/STYLE_Verses_TESTS-compiled.js"></script>
-<!--<script src="tst/testDoc-compiled.js"></script>-->
+<!--<script src="tst/STYLE_Verses_TESTS-compiled.js"></script>-->
+<script src="tst/testDoc-compiled.js"></script>
 <!--<script src="main-compiled.js"></script>-->
 </body>
 </html>
