NEW LOOK: MESS_WITH_DOM COMMENTS: So much simpler way to use the maddening ramda tool.      I REALIZE THAT th real new and important code is just    CREATE a function that SETS verseNode.styles AS            a Function( OF Its VerseClass type: pst, cur, fut)(AND Position IN that Class) THIS IS THE ONLY NEW CODE !!            All the rest - mapping over all three class, actually SETTING node.style==??? Everone does and knows how to !!!                  SO Clif, USE this NOW corrected 'MESS WITH DOM'  Code @ https://github.com/ramda/ramda/issues/1630       AND WORK ON OneTAAT:: CALC_n_SET_Style  !!! IN testDoc.js OneTAAT: STYLE_eachVerse

--- a/testDoc.html
+++ b/testDoc.html
@@ -28,13 +28,13 @@
         }
         .VerseReadGrps > .pst {
             position: static;
-            background-color: rgba(255, 0, 0, 0.24);
+            /*background-color: rgba(255, 0, 0, 0.24);*/
         }
         .VerseReadGrps > .cur {
             font-size: larger;
         }
         .VerseReadGrps > .fut {
-            background-color: rgba(145, 248, 29, 0.29);
+            /*background-color: rgba(145, 248, 29, 0.29);*/
         }
         <!--</style>
 </head>
