REMOVED OR STUBBED Saturdays FOOLING AND FAILING USING export | import ING!!

--- a/testDoc.html
+++ b/testDoc.html
@@ -118,6 +118,7 @@
 </div>
 <!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.js"></script>
+<!--<script src="https://github.com/fantasyland/fantasy-land"></script>-->
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
