MOVED round(x) FROM testDocs.js TO src/functions.js

--- a/tst/update_ReadGrp_TESTS.html
+++ b/tst/update_ReadGrp_TESTS.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 </div>
-<script src="functions-compiled.js"></script>
+<script src="DEPRfunctions-compiled.js"></script>
 <script src="../src/bindHandlers-compiled.js"></script>
 <script src="../src/update_ReadGrp-compiled.js"></script>
 <script src="../src/STYLE_Verses-compiled.js"></script>
