--- a/Job_01.html
+++ b/Job_01.html
@@ -948,7 +948,7 @@ Selected Text:
         </div>
     </div>
 </div>
-<script src="tst/functions-compiled.js"></script>
+<script src="tst/DEPRfunctions-compiled.js"></script>
 <script src="./src/bindHandlers-compiled.js"></script>
 <script src="src/update_ReadGrp-compiled.js"></script>
 <script src="src/STYLE_Verses-compiled.js"></script>
