--- a/testDoc.html
+++ b/testDoc.html
@@ -124,6 +124,7 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <script src="src/READ_Grps-compiled.js"></script>
 <script src="tst/a_stylWt_MAKER-compiled.js"></script>
+<script src="tst/a_versStyl_MUTATOR-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
 <!--<script src="main-compiled.js"></script>-->
 </body>
