DELETED LOTS OF old tst/ files
READY TO strand drBoolean_Chptr_5 AND REFACT testDoc

OneTAAT:    CALC_n_SET_Style  !!!
OneTAAT:    STYLE_eachVerse
IN testDoc.js

--- a/Job_01.html
+++ b/Job_01.html
@@ -948,10 +948,10 @@ Selected Text:
         </div>
     </div>
 </div>
-<script src="tst/DEPRfunctions-compiled.js"></script>
+<!--<script src="tst/DEPRfunctions-compiled.js"></script>-->
 <script src="./src/bindHandlers-compiled.js"></script>
-<script src="src/update_ReadGrp-compiled.js"></script>
-<script src="src/STYLE_Verses-compiled.js"></script>
+<!--<script src="src/update_ReadGrp-compiled.js"></script>-->
+<!--<script src="src/STYLE_Verses-compiled.js"></script>-->
 <script src="./src/objects-compiled.js"></script>
 <script src="tst/testDoc-compiled.js"></script>
 <!--<script src="./src/current_app-compiled.js"></script>-->
