--- a/testDoc.html
+++ b/testDoc.html
@@ -122,9 +122,9 @@
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="src/READ_Grps-compiled.js"></script>
-<script src="tst/a_stylWt_MAKER-compiled.js"></script>
-<script src="tst/a_versStyl_MUTATOR-compiled.js"></script>
+<!--<script src="src/READ_Grps-compiled.js"></script>-->
+<!--<script src="tst/a_stylWt_MAKER-compiled.js"></script>-->
+<!--<script src="tst/a_versStyl_MUTATOR-compiled.js"></script>-->
 <script src="tst/testDoc-compiled.js"></script>
 <!--<script src="main-compiled.js"></script>-->
 </body>
