--- a/simpleTests.html
+++ b/simpleTests.html
@@ -118,9 +118,14 @@
 </div>
 <!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.js"></script>
+<!--<script src="https://github.com/fantasyland/fantasy-land"></script>-->
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
+<!--<script src="src/READ_Grps-compiled.js"></script>-->
+<!--<script src="tst/a_stylWt_MAKER-compiled.js"></script>-->
+<!--<script src="tst/a_versStyl_MUTATOR-compiled.js"></script>-->
 <script src="tst/simpleTests-compiled.js"></script>
+<!--<script src="main-compiled.js"></script>-->
 </body>
 </html>
