--- a/simpleTests.html
+++ b/simpleTests.html
@@ -28,7 +28,7 @@
         }
         .VerseReadGrps > .pst {
             position: static;
-            /*background-color: rgba(255, 0, 0, 0.24);*/
+            background-color: rgba(255, 0, 0, 0.24);
         }
         .VerseReadGrps > .cur {
             font-size: larger;
@@ -48,13 +48,13 @@
                 King James Version: Chapter 1
                 <div class="VerseReadGrps">
                     <div class="pst">
-                    </div>
-                    <div class="cur">
                         <div class='vers'>chptr:1 verse:1 ndx:0</div>
                     </div>
-                    <div class="fut">
+                    <div class="cur">
                         <div class='vers'>chptr:1 verse:2 ndx:1</div>
                         <div class='vers'>chptr:1 verse:3 ndx:2</div>
+                    </div>
+                    <div class="fut">
                         <div class='vers'>chptr:1 verse:4 ndx:3</div>
                         <div class='vers'>chptr:1 verse:5 ndx:4</div>
                         <div class='vers'>chptr:1 verse:6 ndx:5</div>
@@ -70,13 +70,13 @@
                 King James Version: Chapter 2
                 <div class="VerseReadGrps">
                     <div class="pst">
+                        <div class='vers'>chptr:2 verse:1 ndx:0</div>
                     </div>
                     <div class="cur" id="cur_VerseReadGrp">
-                        <div class='vers'>chptr:2 verse:1 ndx:0</div>
                         <div class='vers'>chptr:2 verse:2 ndx:1</div>
+                        <div class='vers'>chptr:2 verse:3 ndx:2</div>
                     </div>
                     <div class="fut">
-                        <div class='vers'>chptr:2 verse:3 ndx:2</div>
                         <div class='vers'>chptr:2 verse:4 ndx:3</div>
                         <div class='vers'>chptr:2 verse:5 ndx:4</div>
                         <div class='vers'>chptr:2 verse:6 ndx:5</div>
