CLEANING UPCODE This a starWars_Verse that IS STABLE :   true
1TAAT:  stable starWars_Verses
IN simpleTests.js

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -34,7 +34,7 @@
             font-size: larger;
         }
         .VerseReadGrps > .fut {
-            /*background-color: rgba(145, 248, 29, 0.29);*/
+            background-color: rgba(199, 248, 151, 0.29);
         }
         <!--</style>
 </head>
