--- a/Job_01.html
+++ b/Job_01.html
@@ -951,7 +951,7 @@ Selected Text:
 <!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.js"></script>
 <script src="src/objects-compiled.js"></script>
-<script src="src/functions-compiled.js"></script>
+<script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
