IN tst_EVOLVE_Styles.js    //COMMENTED OUT FOR USE IN simpleTest.js BEGIN TO INCLUDE  EVOLVE_Styles IN simpleTests.js

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -121,7 +121,7 @@
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<!--<script src="tst/tst_EVOLVE_Styles-compiled.js"></script>-->
+<script src="tst/tst_EVOLVE_Styles-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
 </html>
