WORKING  styl_One_Verse( sobj)(oneVerse)                                                       IN: simpleTests.js                                                       IN: styl_3_classes

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>testDoc</title>
+    3 <title>testDoc</title>
     <!--<link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">-->
     <!--<link rel="stylesheet" href="uTD.css">-->
     <style>
@@ -121,7 +121,7 @@
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="tst/tst_LensSet_Styles-compiled.js"></script>
-<script src="tst/simpleTests-compiled.js"></script>
+<!--<script src="tst/tst_LensSet_Styles-compiled.js"></script>-->
+<script src="tst/tst_simple_styl_one_verse-compiled.js"></script>
 </body>
 </html>
