--- a/simpleTests.html
+++ b/simpleTests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    3 <title>testDoc</title>
+    <title>testDoc:style_theseVerses</title>
     <!--<link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">-->
     <!--<link rel="stylesheet" href="uTD.css">-->
     <style>
@@ -28,7 +28,7 @@
         }
         .VerseReadGrps > .pst {
             position: static;
-            background-color: rgba(255, 0, 0, 0.24);
+            background-color: rgba(255, 183, 232, 0.12);
         }
         .VerseReadGrps > .cur {
             font-size: larger;
