WIP   tst_STYLE_Verses.js  WITH some support code IN tst_cssStyleDecl_Obj.js (with require commented out)

--- a/testDoc.html
+++ b/testDoc.html
@@ -122,5 +122,6 @@
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
+<script src="tst/tst_STYLE_Verses-compiled.js"></script>
 </body>
 </html>
