--- a/simpleTests.html
+++ b/simpleTests.html
@@ -121,7 +121,8 @@
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>
-<script src="tst/tst_STYLE_Verses-compiled.js"></script>
+<!--<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>-->
+<!--<script src="tst/tst_STYLE_Verses-compiled.js"></script>-->
+<script src="tst/SET_clss_elemS_01-compiled.js"></script>
 </body>
 </html>
