--- a/simpleTests.html
+++ b/simpleTests.html
@@ -118,12 +118,13 @@
 </div>
 <!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.js"></script>
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.19.0/ramda.min.js"></script>-->
 <script src="src/objects-compiled.js"></script>
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <!--<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>-->
 <!--<script src="tst/tst_STYLE_Verses-compiled.js"></script>-->
 <!--<script src="tst/SET_clss_elemS_02-compiled.js"></script>-->
-<script src="tst/SET_clss_elemS_03-compiled.js"></script>
+<script src="tst/set_clss_elemS_03-compiled.js"></script>
 </body>
 </html>
