simpleTests.html     <script src="src/functions_01-compiled.js">      REMOVED 160531.0747 conflict with newly added exports</script>

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -120,7 +120,7 @@
 <script src="node_modules/ramda/dist/ramda.js"></script>
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.19.0/ramda.min.js"></script>-->
 <script src="src/objects-compiled.js"></script>
-<script src="src/functions_01-compiled.js"></script>
+<!--<script src="src/functions_01-compiled.js">      REMOVED 160531.0747 conflict with newly added exports</script>-->
 <script src="src/bindHandlers-compiled.js"></script>
 <!--<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>-->
 <!--<script src="tst/tst_STYLE_Verses-compiled.js"></script>-->
