--- a/simpleTests.html
+++ b/simpleTests.html
@@ -73,7 +73,7 @@
                         <div class='vers'>chptr:2 verse:1 ndx:0</div>
                     </div>
                     <div class="cur" id="cur_VerseReadGrp">
-                        <div class='vers'>chptr:2 verse:2 ndx:1</div>
+                        <div class='vers' id="tst1">chptr:2 verse:2 ndx:1</div>
                         <div class='vers'>chptr:2 verse:3 ndx:2</div>
                     </div>
                     <div class="fut">
@@ -124,7 +124,7 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <!--<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>-->
 <!--<script src="tst/tst_STYLE_Verses-compiled.js"></script>-->
-<!--<script src="tst/SET_clss_elemS_02-compiled.js"></script>-->
-<script src="tst/set_clss_elemS_03-compiled.js"></script>
+<!--<script src="tst/set_clss_elemS_03-compiled.js"></script>-->
+<script src="tst/simpleTests-compiled.js"></script>
 </body>
 </html>
