* 2 Jun 16 new name: tst/tst_EVOLVER.js  is a container demonstrating evolve  this file now contains the use of R.evolve   in simpleTests.js. It showed, for fut verses that evolve, transformers etc really simplify setting a new csd.  * old name:  FROM tst/ set_clss_elemS_03.js

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -122,9 +122,7 @@
 <script src="src/objects-compiled.js"></script>
 <!--<script src="src/functions_01-compiled.js">      REMOVED 160531.0747 conflict with newly added exports</script>-->
 <script src="src/bindHandlers-compiled.js"></script>
-<!--<script src="tst/tst_cssStyleDecl_Obj-compiled.js"></script>-->
-<!--<script src="tst/tst_STYLE_Verses-compiled.js"></script>-->
-<!--<script src="tst/set_clss_elemS_03-compiled.js"></script>-->
-<script src="tst/simpleTests-compiled.js"></script>
+<!--CURRENT tst script-->
+<script src="tst/tst_EVOLVER-compiled.js"></script>
 </body>
 </html>
