CLEANUP AND RENAME simpleTests.html

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>testDoc:style_theseVerses</title>
-    <!--<link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.20.0.css">-->
-    <!--<link rel="stylesheet" href="uTD.css">-->
+    <title> simpleTests </title>
     <style>
         .console {
             position: static;
