WIP -> get rClass className for each of the three rClasses MAIN: script:   simpleTests.html included minor changes to  with functions, functions_01, simpleTests.html EVOLVER

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -116,11 +116,12 @@
 </div>
 <!--// the Order of these is important: Dependencies-->
 <script src="node_modules/ramda/dist/ramda.js"></script>
-<!--<script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.19.0/ramda.min.js"></script>-->
 <script src="src/objects-compiled.js"></script>
-<!--<script src="src/functions_01-compiled.js">      REMOVED 160531.0747 conflict with newly added exports</script>-->
+<script src="src/functions-compiled.js"></script>
+<script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<!--CURRENT tst script-->
 <script src="tst/tst_EVOLVER-compiled.js"></script>
+<!--CURRENT tst script-->
+<script src="tst/simpleTests-compiled.js"></script>
 </body>
 </html>
