GotIW:  _MUTATE_trgts() STABLE:  STEP through all class elements and MUTATE them - at least a stubs NOW: ADD modify each Verse's initialCSD to get the final code: UPDATE_Styles

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -120,7 +120,7 @@
 <script src="src/functions-compiled.js"></script>
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
-<script src="tst/tst_EVOLVER-compiled.js"></script>
+<!--<script src="tst/tst_EVOLVER-compiled.js"></script>-->
 <!--CURRENT tst script-->
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
