--- a/simpleTests.html
+++ b/simpleTests.html
@@ -122,6 +122,7 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <!--CURRENT tst script-->
 <!--<script src="tst/tst_EVOLVER-compiled.js"></script>-->
+<!--<script src="tst/transformers_tests-compiled.js"></script>-->
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
 </html>
