--- a/simpleTests.html
+++ b/simpleTests.html
@@ -122,8 +122,20 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <!--CURRENT tst script-->
 <!--<script src="tst/tst_EVOLVER-compiled.js"></script>-->
-<script src="tst/setWeight_tests-compiled.js"></script>
+<!--<script src="tst/setWeight_tests-compiled.js"></script>-->
 <script src="tst/transformers_tests-compiled.js"></script>
+<!--<script type="module">-->
+<!--import _trgt_clss_CSD from 'tst/transformers_tests-compiled';-->
+<!--//    var x = 123;-->
+<!--//-->
+<!--//    // The current scope is not global-->
+<!--//    console.log('$' in window); // false-->
+<!--//    console.log('x' in window); // false-->
+<!--//-->
+<!--//    // `this` still refers to the global object-->
+<!--//    console.log(this === window); // true-->
+<!--</script>-->
+
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
 </html>
