* 160609 BEGIN WIP TO evolve the baseCSD -> trgtCSD USING ndx, etc  * 09.2..  removed tstN 4. It was INVOKING evoke(transformers) confusing my test WHICH still does not have a good test.  * 08:2.. _EVOLVE_clss_CSD WORKS!! AND  IS INVOKED BY just including src=transformers_tests.js in simpleTests.html

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -122,7 +122,7 @@
 <script src="src/bindHandlers-compiled.js"></script>
 <!--CURRENT tst script-->
 <!--<script src="tst/tst_EVOLVER-compiled.js"></script>-->
-<!--<script src="tst/setWeight_tests-compiled.js"></script>-->
+<script src="tst/setWeight_tests-compiled.js"></script>
 <script src="tst/transformers_tests-compiled.js"></script>
 <!--<script type="module">-->
 <!--import _trgt_clss_CSD from 'tst/transformers_tests-compiled';-->
