* 160616  CUT= _set_trgtCSD    REFACT    _RESTYLE_all_trgtEs()  * @0530     still stable and working for 'opacity' csdKey BUT mot for 'fontSize'

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -121,7 +121,7 @@
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
 <!--CURRENT tst script-->
-<!--<script src="tst/tst_EVOLVER-compiled.js"></script>-->
+<script src="tst/tst_regex-compiled.js"></script>
 <script src="tst/setWeight_tests-compiled.js"></script>
 <!--<script src="tst/transformers_tests-compiled.js"></script>-->
 <script src="tst/simpleTests-compiled.js"></script>
