* 160617 MOVED tap_this FROM calc_Wt_02.js TO functions.js

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -120,6 +120,7 @@
 <script src="src/functions_01-compiled.js"></script>
 <script src="src/functions-compiled.js"></script>
 <script src="src/bindHandlers-compiled.js"></script>
+<!--<script src="tst/calc_Wt_02-compiled.js"></script>-->
 <!--CURRENT tst script-->
 <script src="tst/tst_regex-compiled.js"></script>
 <script src="tst/setWeight_tests-compiled.js"></script>
