simpleTests.js  * 160621  * @0610 WORKING STABLE  *  removed tests and cose not needed by using transformers introduced yesterday.  *  first REFACT weighting - invert - for 'fut' class divs  *  second REFACT to eliminate the rClass divs

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -123,7 +123,7 @@
 <!--<script src="tst/calc_Wt_02-compiled.js"></script>-->
 <!--CURRENT tst script-->
 <!--<script src="tst/tst_regex-compiled.js"></script>-->
-<script src="tst/setWeight_tests-compiled.js"></script>
+<!--<script src="tst/setWeight_tests-compiled.js"></script>-->
 <script src="tst/transformers_tests-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
 </body>
