CLEAN UP in general

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -126,5 +126,7 @@
 <!--<script src="tst/setWeight_tests-compiled.js"></script>-->
 <script src="tst/transformers_tests-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
+<script src="tst/classByIndex_test.js"></script>
+
 </body>
 </html>
