--- a/simpleTests.html
+++ b/simpleTests.html
@@ -66,7 +66,7 @@
         <div class="cur" id="cur_ChptrReadGrp">
             <div class="chptr">
                 King James Version: Chapter 2
-                <div class="VerseReadGrps">
+                <div class="VerseReadGrps" id="curChptrVerses">
                     <div class="pst">
                         <div class='vers'>chptr:2 verse:1 ndx:0</div>
                         <div class='vers' id="tst1">chptr:2 verse:2 ndx:1</div>
