--- a/simpleTests.html
+++ b/simpleTests.html
@@ -123,8 +123,8 @@
 <!--<script src="tst/calc_Wt_02-compiled.js"></script>-->
 <!--CURRENT tst script-->
 <!--<script src="tst/tst_regex-compiled.js"></script>-->
-<!--<script src="tst/setWeight_tests-compiled.js"></script>-->
-<script src="tst/transformers_tests-compiled.js"></script>
+<script src="tst/wtER_tests-compiled.js"></script>
+<script src="tst/evolve_CSD_tests-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
 <script src="tst/classByIndex_test.js"></script>
 
