*  classByIndex_tests.js  *  160624  use splitAtCur() to construct _pstNL, _curNL, _futNL  *      @1633 ADDED these tests to simpleTests.html  *      @0930 WIP _pstNL 2 test STABLE

--- a/simpleTests.html
+++ b/simpleTests.html
@@ -126,7 +126,7 @@
 <script src="tst/wtER_tests-compiled.js"></script>
 <script src="tst/evolve_CSD_tests-compiled.js"></script>
 <script src="tst/simpleTests-compiled.js"></script>
-<!--<script src="tst/classByIndex_test.js"></script>-->
+<script src="tst/classByIndex_test-compiled.js"></script>
 
 </body>
 </html>
